同期情報の登録処理とツイート処理を追加
